--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         release {
             debuggable true
             signingConfig signingConfigs.debug
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
@@ -43,5 +43,5 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
 
     compile 'me.ele:blur:1.0.3'
-//    compile project(':library')
+    compile project(':library')
 }
