--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".SecondActivity" />
+        <activity android:name=".SecondActivity" android:launchMode="singleTop"/>
+        <activity android:name=".ThirdActivity" android:launchMode="singleTask"/>
     </application>
 
 </manifest>
